--- a/ImageFeed/Presentation/Base.lproj/Main.storyboard
+++ b/ImageFeed/Presentation/Base.lproj/Main.storyboard
@@ -174,7 +174,7 @@
                                     <outlet property="delegate" destination="xgf-xr-mAD" id="hOC-1U-bWj"/>
                                 </connections>
                             </scrollView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sQe-t7-FO8" userLabel="Back">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sQe-t7-FO8" userLabel="BackButton">
                                 <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="44" id="Ucr-Sh-u8R"/>
@@ -187,13 +187,27 @@
                                     <action selector="tapBack" destination="xgf-xr-mAD" eventType="touchUpInside" id="LIo-7d-aj5"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vBq-Pg-mBF" userLabel="ShareButton">
+                                <rect key="frame" x="171.66666666666666" y="785" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="TNa-sh-ZFk"/>
+                                    <constraint firstAttribute="height" constant="50" id="hFE-Rl-PpQ"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="Share"/>
+                                <connections>
+                                    <action selector="tapShare" destination="xgf-xr-mAD" eventType="touchUpInside" id="KOa-Hh-uES"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="sQM-Xi-Y7Y"/>
                         <color key="backgroundColor" name="YP Black"/>
                         <constraints>
+                            <constraint firstItem="sQM-Xi-Y7Y" firstAttribute="bottom" secondItem="vBq-Pg-mBF" secondAttribute="bottom" constant="17" id="0tS-Bx-P7e"/>
                             <constraint firstItem="sQe-t7-FO8" firstAttribute="leading" secondItem="sQM-Xi-Y7Y" secondAttribute="leading" id="4fY-Hh-HUy"/>
                             <constraint firstItem="sQM-Xi-Y7Y" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="sQe-t7-FO8" secondAttribute="trailing" symbolic="YES" id="61B-Wq-Ufe"/>
                             <constraint firstAttribute="top" secondItem="EHu-rv-FNt" secondAttribute="top" id="8ql-ff-co8"/>
+                            <constraint firstItem="vBq-Pg-mBF" firstAttribute="centerX" secondItem="sQM-Xi-Y7Y" secondAttribute="centerX" id="IRB-NM-6cP"/>
                             <constraint firstAttribute="leading" secondItem="EHu-rv-FNt" secondAttribute="leading" id="eGG-Dz-y68"/>
                             <constraint firstItem="EHu-rv-FNt" firstAttribute="bottom" secondItem="lID-db-tlg" secondAttribute="bottom" id="lOM-vl-gNG"/>
                             <constraint firstItem="EHu-rv-FNt" firstAttribute="trailing" secondItem="lID-db-tlg" secondAttribute="trailing" id="u8o-xU-QQK"/>
@@ -241,6 +255,7 @@
         <image name="Main Tab" width="30" height="30"/>
         <image name="Profile Tab" width="30" height="30"/>
         <image name="RedHeart" width="44" height="44"/>
+        <image name="Share" width="50" height="50"/>
         <namedColor name="YP Black">
             <color red="0.10199999809265137" green="0.10599999874830246" blue="0.13300000131130219" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
