--- a/ImageFeed/Presentation/Base.lproj/Main.storyboard
+++ b/ImageFeed/Presentation/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="o5f-ba-lih">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="QXU-9n-7aw">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -224,6 +225,106 @@
             </objects>
             <point key="canvasLocation" x="1402" y="-464"/>
         </scene>
+        <!--Auth View Controller-->
+        <scene sceneID="xcU-z7-P0y">
+            <objects>
+                <viewController id="QXU-9n-7aw" customClass="AuthViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="iIl-Y2-RKC">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="PVZ-vZ-q7k">
+                                <rect key="frame" x="166.66666666666666" y="396" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="wu8-Va-sum"/>
+                                    <constraint firstAttribute="width" constant="60" id="y8D-6s-I9J"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CES-X7-qh6">
+                                <rect key="frame" x="16" y="680" width="361" height="48"/>
+                                <color key="backgroundColor" name="YP White"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="dJ9-mq-xao"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <color key="tintColor" name="YP Black"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Войти">
+                                    <color key="titleColor" name="YP Black"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="16"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <segue destination="x5x-8b-PKc" kind="presentation" identifier="ShowWebView" modalPresentationStyle="overFullScreen" id="kYm-BL-TtQ"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="j92-qS-7H2"/>
+                        <color key="backgroundColor" name="YP Black"/>
+                        <constraints>
+                            <constraint firstItem="CES-X7-qh6" firstAttribute="leading" secondItem="j92-qS-7H2" secondAttribute="leading" constant="16" id="FdH-Aj-2pg"/>
+                            <constraint firstItem="PVZ-vZ-q7k" firstAttribute="centerY" secondItem="iIl-Y2-RKC" secondAttribute="centerY" id="Iqm-ux-rlh"/>
+                            <constraint firstItem="j92-qS-7H2" firstAttribute="trailing" secondItem="CES-X7-qh6" secondAttribute="trailing" constant="16" id="UQA-Pw-PiD"/>
+                            <constraint firstItem="PVZ-vZ-q7k" firstAttribute="centerX" secondItem="iIl-Y2-RKC" secondAttribute="centerX" id="srX-Sz-YUV"/>
+                            <constraint firstItem="j92-qS-7H2" firstAttribute="bottom" secondItem="CES-X7-qh6" secondAttribute="bottom" constant="90" id="xem-HP-q7Q"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1go-Lu-py5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1454" y="-1273"/>
+        </scene>
+        <!--Web View View Controller-->
+        <scene sceneID="LHH-rQ-qK5">
+            <objects>
+                <viewController id="x5x-8b-PKc" customClass="WebViewViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="iQM-mC-TFU">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9mP-iZ-WlZ">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                                <color key="backgroundColor" name="YP White"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ECd-cU-rmt">
+                                <rect key="frame" x="8" y="9" width="44" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="44" id="acZ-tp-xZi"/>
+                                    <constraint firstAttribute="height" constant="44" id="oyB-kB-6lE"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="BackBlack"/>
+                                <connections>
+                                    <action selector="didTapBackButton:" destination="x5x-8b-PKc" eventType="touchUpInside" id="Ped-gT-S8h"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="YhM-bG-le4"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="9mP-iZ-WlZ" secondAttribute="trailing" id="7C9-nH-3Ee"/>
+                            <constraint firstAttribute="bottom" secondItem="9mP-iZ-WlZ" secondAttribute="bottom" id="GwT-V2-4iW"/>
+                            <constraint firstItem="ECd-cU-rmt" firstAttribute="leading" secondItem="YhM-bG-le4" secondAttribute="leading" constant="8" id="Lj3-5B-hLM"/>
+                            <constraint firstItem="9mP-iZ-WlZ" firstAttribute="leading" secondItem="iQM-mC-TFU" secondAttribute="leading" id="hd1-2o-2Zz"/>
+                            <constraint firstItem="ECd-cU-rmt" firstAttribute="top" secondItem="YhM-bG-le4" secondAttribute="top" constant="9" id="nKM-Uv-8RR"/>
+                            <constraint firstItem="9mP-iZ-WlZ" firstAttribute="top" secondItem="iQM-mC-TFU" secondAttribute="top" id="otI-DK-75a"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="webView" destination="9mP-iZ-WlZ" id="ZAb-AC-GPL"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="E92-Dl-hB3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-379" y="-1256"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="eBQ-xq-TsS">
             <objects>
@@ -252,6 +353,8 @@
         <image name="0" width="200" height="132"/>
         <image name="3" width="200" height="300"/>
         <image name="Back" width="24" height="24"/>
+        <image name="BackBlack" width="48" height="48"/>
+        <image name="Logo" width="60" height="60"/>
         <image name="Main Tab" width="30" height="30"/>
         <image name="Profile Tab" width="30" height="30"/>
         <image name="RedHeart" width="44" height="44"/>
@@ -265,5 +368,8 @@
         <namedColor name="YP White">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
